[package]
name = "shell-serve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
futures-util = "0.3.30"
http-body-util = "0.1.1"
hyper = { version = "1.2.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.3", features = ["tokio"] }
os_pipe = { version = "1.1.5", features = ["io_safety"] }
serde = { version = "1.0.200", features = ["derive"] }
shellexpand = "3.1.0"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["io-util", "macros", "net", "process", "rt-multi-thread"] }
tokio-util = { version = "0.7.10", features = ["io"] }
toml = "0.8.12"
urlparse = "0.7.3"
